# stm32f0x1_rust_playground

./: Cargo.toml  LICENSE  README.md  memory.x  openocd.cfg
src/: main.rs
