[package]
authors = ["Noah Maceri <noah.maceri@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "stm-rust"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
panic-halt = "0.2.0"
panic-semihosting = "0.6.0"
stm32f0xx-hal = { version = "0.18", features = ["stm32f051"]}
embedded-hal = "^0.2.4"

# this lets you use `cargo fix`!
[[bin]]
name = "stm-rust"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
